--- a/app/views/layouts/_breadcrumb.html.slim
+++ b/app/views/layouts/_breadcrumb.html.slim
@@ -2,4 +2,4 @@ ol.breadcrumb itemscope="" itemtype="http://schema.org/BreadcrumbList" itemref="
   - @breadcrumbs.each do |breadcrumb|
     li.breadcrumb-item class="#{'active' if breadcrumb.equal? @breadcrumbs.last}"  itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
       => link_to breadcrumb[1], itemtype:"http://schema.org/Thing" , itemscope: "", itemprop: "url" do 
-        span itemprop="name"= breadcrumb[0]
+        span itemprop="name"= breadcrumb[0].truncate(30)
