--- a/app/views/activities/index.html.slim
+++ b/app/views/activities/index.html.slim
@@ -1,9 +1,4 @@
 .flex.flex-col.md:flex-row.mt-4
-  .md:w-1/5
-  .md:w-4/5
-    / = render 'layouts/breadcrumb'
-
-.flex.flex-col.md:flex-row.mt-4
   .md:w-1/5 data-controller='manage-index'
     details.md:hidden.px-8
       summary.uppercase.text-primary.mb-3.cursor-pointer Filtrer
@@ -11,9 +6,10 @@
     .hidden.px-8.md:block
       = render 'activities/filters'
 
-  .md:w-4/5.bg-white.mb-16
-    h1.main-title.px-8.my-12 Nos actions
-    .grid.grid-cols-1.md:grid-cols-2.gap-4.px-8
+  .md:w-4/5.bg-white.p-8.mb-16
+    = render 'layouts/breadcrumb'
+    h1.main-title.my-4 Nos actions
+    .grid.grid-cols-1.md:grid-cols-2.gap-4
       = render partial: 'activities/card', collection: @activities, as: :activity
     - if @activities.empty?
       .text-center
