--- a/app/views/basic_pages/show.html.slim
+++ b/app/views/basic_pages/show.html.slim
@@ -1,12 +1,9 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
-  .md:w-4/6
-    / = render 'layouts/breadcrumb'
-.flex.flex-col.md:flex-row.mt-4
-  .md:w-1/6
   .md:w-3/6.bg-white.p-6
-    h1.main-title.mt-6.mb-4 = @basic_page.title
-    .mb-24.text-body== @basic_page.description
+    = render 'layouts/breadcrumb'
+    h1.main-title.my-4 = @basic_page.title
+    .mb-12.text-body== @basic_page.description
 
     - if @basic_page.key == "contact"
       = render 'basic_pages/contact'
