--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -1,8 +1,4 @@
 .flex.flex-col.md:flex-row.mt-4
-  .md:w-1/5
-  .md:w-4/5
-    = render 'layouts/breadcrumb'
-.flex.flex-col.md:flex-row.mt-4
   .md:w-1/5 data-controller='manage-index'
     details.md:hidden.px-8
       summary.uppercase.text-primary.mb-3.cursor-pointer Filtrer
@@ -20,15 +16,16 @@
                 = link_to program.title, url_for(program.document), class: 'underline', target: '_blank'
 
 
-  .md:w-4/5.bg-white
-    h1.main-title.px-8.my-12 Formations
+  .md:w-4/5.bg-white.p-6
+    = render 'layouts/breadcrumb'
+    h1.main-title.mt-4.mb-8 Formations
     - if params[:sort] == 'by_future'
       = render partial: 'formations/formation_card', collection: @formations, as: :formation
       .text-center.mb-5
         = paginate @formations
     - else
       - @formation_categories.each do |category|
-        h2.text-3xl.text-primary.itc-demi.uppercase.px-8.mb-6 = category.title
+        h2.text-3xl.text-primary.itc-demi.uppercase.mb-6 = category.title
         = render partial: 'formations/formation_card', collection: @formations.by_formation_category(category), as: :formation
       .text-center.mb-5
         = paginate @formation_categories
