--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,7 +28,6 @@ html lang='fr'
           = link_to root_path, title: "Page d'accueil", class: "block flex items-center w-auto" do
             - if Setting.logo.present?
               => image_tag Setting.logo.variant(resize_to_limit: [nil, 75]), class: "mr-3", title: Setting.pole_name
-            / span.font-semibold.text-xl.tracking-tight = Setting.pole_name
         .flex.items-center.flex-1.justify-end.px-6.py-4
           .flex.text-xs.md:text-sm.items-center.justify-end
             = active_link_to main_page_path(@membership_page), active: :inclusive, class: "hidden picto-link px-2" do
@@ -46,7 +45,7 @@ html lang='fr'
       nav.relative.bg-white.hidden.md:block data-target="main-menu.mobileMenu"
         div.flex.flex-col.md:flex-row.justify-between.items-center
           .hidden.xl:flex.justify-start.w-1/2.md:w-1/6
-          div.md:inline-flex.md:flex-row.md:m-auto.md:w-auto.w-full.md:items-center.items-start.flex.flex-col.md:h-auto.flex-grow.justify-between
+          div.md:inline-flex.md:flex-row.md:m-auto.md:w-auto.w-full.md:items-center.items-start.flex.flex-col.md:h-auto.flex-grow.justify-around
             .theme-section.md:inline-flex.md:flex-row
               - @themes.each do |theme|
                 = render "layouts/block_menu", item: theme, item_path: theme_path(theme), css_class: 'block-menu--theme'
@@ -69,8 +68,8 @@ html lang='fr'
       .newsletter-subscription.bg-c-gray-100
         .max-w-6xl.mx-auto.flex.flex-col.md:flex-row.py-10
           .w-full.md:w-3/5.text-center.md:text-right.px-6
-            p.text-body.text-sm.uppercase = Setting.newsletter_subscription_title
-            p.text-body.text-xs = Setting.newsletter_subscription_description
+            p.text-body.text-base.uppercase = Setting.newsletter_subscription_title
+            p.text-body.text-sm = Setting.newsletter_subscription_description
           .w-full.md:w-2/5.px-6
             = form_with url: newsletters_path, method: :post, local: true, class: "flex" do |f|
               = f.email_field :email, placeholder: 'Votre email', 'aria-label': 'Votre email', required: true, class: "flex-1 px-2 block w-full rounded-none border border-gray-300 mr-3 text-body text-xs"
