--- a/app/views/main_pages/show.html.slim
+++ b/app/views/main_pages/show.html.slim
@@ -4,20 +4,18 @@
     = render 'layouts/breadcrumb'
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
-  .md:w-3/6.p-6
-    h1.main-title.mt-6.mb-4 = @main_page.title
+  .md:w-3/6.bg-white.p-6
+    h1.main-title.mt-6.mb-10 = @main_page.title
     - if @main_page.baseline.present?
-      p.itc-demi.text-xl.text-primary.uppercase.mb-16 = @main_page.baseline
-    - if @main_page.image.present?
-      = image_tag  @main_page.image, class: "mb-8 mx-auto"
+      p.title-2.mb-6 = @main_page.baseline
     - if @main_page.short_description.present?
-      p.mb-24.text-primary.text-lg.text-body= @main_page.short_description
+      p.mb-4.text-primary.text-lg.text-body= @main_page.short_description
     - if @main_page.description.present?
       .mb-24.text-body== @main_page.description
 
-  / - if @main_page.key == "key_numbers"
-  /   = render 'main_pages/key_numbers'
   .md:w-2/6.px-4.md:pr-0
+    - if @main_page.image.present?
+      = image_tag  @main_page.image, class: "mb-4"
     = render 'resources/section', resources: @main_page.resources.enabled
     = render 'main_pages/section', main_pages: @main_page.child_pages.enabled
 
