--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,20 +1,14 @@
 .flex.flex-col.md:flex-row.mt-4
-  .md:w-1/5
-  .md:w-4/5
-    = render 'layouts/breadcrumb'
-
-.flex.flex-col.md:flex-row.mt-4
   .md:w-1/5 data-controller='manage-index'
     details.md:hidden.px-8
       summary.uppercase.text-primary.mb-3.cursor-pointer Filtrer
       = render 'posts/filters'
     .hidden.px-8.md:block
       = render 'posts/filters'
-
-
-  .md:w-4/5.bg-white.mb-16
-    h1.main-title.px-8.my-12 Actualités
-    .grid.grid-cols-1.md:grid-cols-2.gap-4.px-8
+  .md:w-4/5.bg-white.mb-16.p-6
+    = render 'layouts/breadcrumb'
+    h1.main-title.mt-4.mb-10 Actualités
+    .grid.grid-cols-1.md:grid-cols-2.gap-4
       = render partial: 'posts/card', collection: @posts, as: :post
     - if @posts.empty?
       .text-center
