--- a/app/views/profiles/_card.html.slim
+++ b/app/views/profiles/_card.html.slim
@@ -3,4 +3,4 @@
     = image_pack_tag "picto/Picto-#{profile.key}.svg", class: "w-full"
   .px-2
     = link_to profile.title, profile_path(profile), class: 'itc-demi uppercase text-primary'
-    p.text-body.text-xs= profile.baseline.truncate(50)
+    p.text-body.text-sm= profile.baseline.truncate(50)
