--- a/app/views/shared/_person_card.html.slim
+++ b/app/views/shared/_person_card.html.slim
@@ -2,7 +2,7 @@
   - if person.image.attached?
     = image_tag person.image.variant(resize_and_pad: [500, 300]), class: "w-full"
   .px-6.py-4
-    h3.font-bold.text-xl
+    h3.font-bold.text-l
       - if person.respond_to?(:link) && person.link.present?
         = link_to person.title, person.link, class: 'hover:underline'
       - else
