--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -1,5 +1,5 @@
 .flex.flex-col.md:flex-row.mt-4
-  .md:w-1/5 data-controller='manage-index'
+  .md:w-1/5.mb-8 data-controller='manage-index'
     details.md:hidden.px-8
       summary.uppercase.text-primary.mb-3.cursor-pointer Filtrer
       = render 'formations/filters'
