--- a/app/views/admin/basic_pages/_form.html.slim
+++ b/app/views/admin/basic_pages/_form.html.slim
@@ -4,16 +4,16 @@
   = f.label :title, class: "font-weight-bold"
   = f.text_field :title, class: 'form-control'
 
-.form-group
-  label.font-weight-bold Thèmes
-  .form-group
-    - Theme.all.each do |theme|
-      .form-check.form-check-inline
-        => f.check_box :theme_ids, {multiple: true,
-                  checked: f.object.themes.include?(theme),
-                  class: 'form-check-input'},
-                  theme.id, nil
-        = f.label :theme_ids, theme.title, value: theme.id, class: "form-check-label"
+/ .form-group
+/   label.font-weight-bold Thèmes
+/   .form-group
+/     - Theme.all.each do |theme|
+/       .form-check.form-check-inline
+/         => f.check_box :theme_ids, {multiple: true,
+/                   checked: f.object.themes.include?(theme),
+/                   class: 'form-check-input'},
+/                   theme.id, nil
+/         = f.label :theme_ids, theme.title, value: theme.id, class: "form-check-label"
 
 .form-group
   = f.label :description, class: "font-weight-bold"
@@ -23,7 +23,7 @@
 /   f: f, \
 /   destroy_path: f.object.image.present? ? destroy_upload_admin_basic_page_path(f.object, f.object.image.id, redirect: :edit) : nil}
 
-= render "admin/resources/nested_form", f: f
+/ = render "admin/resources/nested_form", f: f
 
 = render "admin/shared/action_btns", f: f, index_path: admin_basic_pages_path
 
