--- a/app/views/admin/basic_pages/index.html.slim
+++ b/app/views/admin/basic_pages/index.html.slim
@@ -1,4 +1,4 @@
-= link_to "Créer une page", new_admin_basic_page_path, class:'btn btn-primary float-right'
+/ = link_to "Créer une page", new_admin_basic_page_path, class:'btn btn-primary float-right'
 h1.mb-5 Pages légales
 
 div data-controller='manage-index'
