--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -34,9 +34,15 @@ body
       font-size: 14px
   > a
     display: inline-block
-		text-align: center
   > a.active
     font-family: 'ITC Avant Garde Gothic Std Bold'
+  > a::before
+    display: block
+    content: attr(title)
+    font-family: 'ITC Avant Garde Gothic Std Bold'
+    height: 0
+    overflow: hidden
+    visibility: hidden
 
   .block-menu
     display: none
@@ -48,13 +54,14 @@ body
 
 @media (min-width: 1024px)
   .block-menu-toggler
-    > a::before
-      display: block
-      content: attr(title)
-      font-family: 'ITC Avant Garde Gothic Std Bold'
-      height: 0
-      overflow: hidden
-      visibility: hidden
+    text-align: center
+    // > a::before
+    //   display: block
+    //   content: attr(title)
+    //   font-family: 'ITC Avant Garde Gothic Std Bold'
+    //   height: 0
+    //   overflow: hidden
+    //   visibility: hidden
     &.active
       .block-menu
         font-weight: normal
@@ -63,13 +70,14 @@ body
 .picto-link
   @apply text-primary
   text-transform: uppercase
+  display: flex
+  flex-direction: column
+  align-items: center
   &:hover, &:active, &.active
     font-family: 'ITC Avant Garde Gothic Std Medium'
-@media (min-width: 1024px)
-  .picto-link
-    display: flex
-    flex-direction: column
-    align-items: center
+  &.picto-link--highlighted
+    @apply bg-primary
+    @apply text-gray-100
 
 .trix-content
   h1
