--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -11,7 +11,7 @@ html lang="#{I18n.locale}"
     = csrf_meta_tag
 
     = favicon_link_tag asset_path '/favicons/favicon.ico'
-    = favicon_link_tag asset_path '/favicons/favicon.png'
+    = favicon_link_tag asset_path '/favicons/favicon.svg'
 
   body
     .container-fluid.h-100
