--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -88,9 +88,13 @@ body
     @apply text-primary
   ul
     list-style: disc inside
+  ul ul
+    margin: 0 0 0 1rem
   ol
     list-style-type: decimal
     list-style-position: inside
+  ol ol
+    margin: 0 0 0 1rem
 
 .footer-line
   height: 15px
