--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -4,13 +4,13 @@
     = render 'layouts/breadcrumb'
     h1.main-title.mt-4.mb-10 = @profile.title
     p.title-2.mb-6 = @profile.baseline
-    - if @profile.image.present?
-      = image_tag  @profile.image, class: "mb-8 mx-auto"
     - if @profile.short_description.present?
-      p.mb-4.text-primary.text-lg= @profile.short_description
-    .mb-24== @profile.description
+      p.mb-4.text-primary.text-lg.text-body= @profile.short_description
+    .mb-24.text-body== @profile.description
 
   .md:w-2/6.px-4.md:pr-0
+    - if @profile.image.present?
+      = image_tag  @profile.image, class: "mb-8 mx-auto"
     = render 'activities/section', activities: @profile.activities.enabled
     = render 'resources/section', resources: @profile.resources.enabled
 
